# Qinco

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml  eval_qinco.py  model_qinco.py  pyproject.toml  requirements.txt  run.py  run.sh  run_train_pq.bash  search_2stage.py  search_ivf.py  utils.py
config/: qinco_cfg.yaml
config/model_args/: qinco1.yaml  qinco2-L.yaml  qinco2-M.yaml  qinco2-S.yaml
data/bigann/: download_data.sh
data/fb_ssnpp/: download_data.sh
docs/: AQ_approximate_search.md  IVF_search.md  checkpoints.md  downloading_data.md
qinco/: datasets.py  log.py  metrics.py  qinco_tasks.py  utils.py  vrq.py
qinco/model/: __init__.py  qinco_base.py  qinco_inference.py  scheduler.py
qinco/search/: optim_order.py  pairwise_decoder.py  search_tasks.py  search_utils.py
qinco_v1/: .gitignore  README.md  codec_qinco.py  datasets.py  pq_qinco.py  train_qinco.py
qinco_v1/data/contriever/: download_data.sh
qinco_v1/data/deep1b/: download_data.sh  fbin_to_fvecs.py
qinco_v1/docs/: PQ_QINCo.md  installation.md  training.md
